# PreGraphModeling

./: .gitignore  404.html  CONGA_IMPLEMENTATION.md  DESCRIPTION  Dockerfile  Dockerfile.python  LICENSE-text.html  NAMESPACE  README.md  authors.html  index.html  pkgdown.yml  sitemap.xml  tcrClustR.dockerfile
.github/workflows/: R-CMD-check.yaml  docker-build.yml  python-tests.yaml
R/: RcppExports.R  active_learning.R  combined_analysis.R  conga_fit.R  conga_wrapper.R  fit_rbm.R  graph_plots.R  partial_correlations.R  pipelines.R  predict_rbm.R  pseudobulk.R  rbm_helpers.R  rbm_training.R  subset.R  utils.R  visualize_rbm.R  zinb_model.R
R/rbm/: predict_rbm.R  visualize_rbm.R
docker/: run_zinb_apptainer_uv.sh  uv_torch_autoinstall.sh  uv_torch_autoinstall_env.sh
man/: AnalyzeWithZINB.Rd  EstimatePartialCorrelations.Rd  EstimatePartialCorrelationsFromSeurat.Rd  FitRBM.Rd  FitZeroInflatedModels.Rd  PlotPartialCorrelationGraph.Rd  PlotPartialCorrelationHeatmap.Rd  PlotRBMHeatmap.Rd  PlotRBMLayerGraph.Rd  PlotRBMWeights.Rd  PlotRBMWeightsHeatmap.Rd  PseudobulkSeurat.Rd  ReconstructRBM.Rd  ScoreRBMActiveLearningCandidates.Rd  SelectRBMActiveLearningCandidates.Rd  SubsetSeurat.Rd  predict.RBM.Rd  print.PartialCorrelations.Rd  print.RBM.Rd  residualize_gam.Rd  summary.RBM.Rd
python/: README.md  ZINB_GraphicalModel_Tutorial.ipynb  ZINB_GraphicalModel_Tutorial.py  fit_zinb_graphical_model.py  pyproject.toml  requirements.txt  setup.py
python/tests/: __init__.py  test_zinb_graphical_model.py
python/zinb_graphical_model/: __init__.py  data.py  inference.py  model.py
reference/: AnalyzeWithZINB.html  FitZeroInflatedModels.html  SubsetSeurat.html  index.html  residualize_gam.html
src/: RcppExports.cpp  conga_helpers.cpp
tests/: testthat.R  validate_conga.R
tests/testthat/: test-active_learning.R  test-combined_analysis.R  test-conga.R  test-pseudobulk.R  test-rbm.R  test-subset.R  test-utils.R  test-zinb_model.R
vignettes/: active_learning.Rmd  rbm_analysis.Rmd  zinb_analysis.Rmd
